welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:1: error: Missing closing brace `}' assumed here
def sortaSum(a:Int, b:Int):Int = {
^